--- a/slides/intro.qmd
+++ b/slides/intro.qmd
@@ -5,7 +5,7 @@ author:
   - name: Alp Kaan Aksu
     email: a.aksu@campus.lmu.de
 date: 2023-09-20
-date-format: "D•M•YYYY"
+date-format: "D•M•YY"
 footer: "Programmierkurs für Psychologieerstis - Einführung"
 format: 
   clean-revealjs: 
@@ -14,6 +14,7 @@ format:
     background-transition: fade
     touch: true
     embed-resources: true
+    css: reveal_styles.css
   html: default
 ---
 
@@ -22,3 +23,11 @@ Deneme
 ---
 
 Slide 2
+
+---
+
+Slide 3
+
+::: { .exclude }
+Erklärung. Das wird nur im Lesemodus gezeigt!
+:::
