--- a/about.qmd
+++ b/about.qmd
@@ -16,7 +16,8 @@ Ich studiere ebenfalls Psychologie im 3. Semester an der LMU. Nebenher mache ich
 {{< fa brands github >}} [MWiehr](https://github.com/MWiehr)
 
 
-## Caspar Schumacher
+## Nächste Person
+...
 
 ---
 
