--- a/about.qmd
+++ b/about.qmd
@@ -11,12 +11,15 @@ Ich studiere Psychologie in meinem 3. Semester an der LMU und Informatik in mein
 
 
 ## Martin Wiehr
-Ich studiere ebenfalls Psychologie im 3. Semester an der LMU. Nebenher mache ich zwar kein zusätzliches Informatik Studium bin aber trotzdem am Programmieren interressiert.
+Ich studiere ebenfalls Psychologie im 3. Semester an der LMU. Nebenher mache ich zwar kein zusätzliches Informatik Studium bin aber trotzdem am Programmieren interessiert.
 
 {{< fa brands github >}} [MWiehr](https://github.com/MWiehr)
 
 
-## Nächste Person
+## Caspar Schumacher
+Auch ich bin Psychologiestudent im 3. Semester. Programmieren fand ich schon immer spannend, jedoch habe ich mich bisher nicht so recht alleine daran gewagt. Mit R habe ich dann meine ersten Schritte gemacht und erkannt, wie nützlich ein gewisses Maß an Informatikkenntnissen auch für Psychologen sein kann. So entstand die Idee, in diesem Kurs von Grund auf zusammen mit Gleichgesinnten zu lernen!
+
+{{< fa brands github >}} [CasparSchumacher](https://github.com/CasparSchumacher)
 ...
 
 ---
