--- a/index.qmd
+++ b/index.qmd
@@ -26,4 +26,4 @@ Die Idee zur Organisation dieses Kurses entstand, als wir uns in einer Empra-Sit
 
 ---
 
-For questions: [alp@rpsyche.de](mailto:alp@rpsyche.de)
+Für fragen: [alp@rpsyche.de](mailto:alp@rpsyche.de)
