--- a/index.qmd
+++ b/index.qmd
@@ -22,7 +22,7 @@ In der modernen Wissenschaft sind Programmierkenntnisse äußerst hilfreich. Sie
 Man studiert nicht unbedingt Psychologie, um mit Zahlen und Codes um sich zu schmeissen - das ist uns klar. Zumindest ist das Programmieren nicht der übliche Grund für die Wahl dieses Studiums. Man profitiert allerdings erheblich davon, wenn man es kann. Und noch viel wichtiger: Programmieren macht Spaß!
 
 ## Das Konzept
-Unser Kurs wird abwechselnd reguläre Sitzungen und Exkursionssitzungen anbieten. In regulären Sitzungen werden wir uns mit den Grundlagen von R beschäftigen. Das hilft euch dann auch schon direkt für die ersten beiden Statistikmodule. In Exkurssitzungen behandeln wir andere Konzepte und Tools, die für Psychologen hilfreich sein könnten. Wenn du dich ausschließlich für R interessierst, kannst du auch nur die R-Sitzungen im zweiwöchigen Rhythmus besuchen. Eine vorläufige Übersicht der Themen findest du [hier](topics.qmd). Außerdem freuen wir uns in den Sitzungen Ideen von euch zu integrieren und zu spannenden Diskussionen anzuregen.
+Unser Kurs wird abwechselnd reguläre Sitzungen und Exkursionssitzungen anbieten. In regulären Sitzungen werden wir uns mit den Grundlagen von R beschäftigen. Das hilft euch dann auch schon direkt für die ersten beiden Statistikmodule. In Exkurssitzungen behandeln wir andere Konzepte und Tools, die für Psychologen hilfreich sein könnten. Wenn du dich ausschließlich für R interessierst, kannst du auch nur die R-Sitzungen im zweiwöchigen Rhythmus besuchen. Eine vorläufige Übersicht der Themen findest du [hier](themenuebersicht.qmd). Außerdem freuen wir uns in den Sitzungen Ideen von euch zu integrieren und zu spannenden Diskussionen anzuregen.
 
 ## Für wen ist dieser Kurs gedacht?
 Jeder, der das Programmieren lernen möchte, ist herzlich eingeladen, teilzunehmen. Wir werden versuchen, so gut es geht, euch bei auftretenden Problemen zu unterstützen. Allerdings sind wir selbst längst keine Profis und wollen gern mit euch zusammen lernen! Diejenigen, die motiviert sind, die vorgestellten Ideen und Konzepte auch über den Kurs hinaus weiterzuverfolgen, werden wahrscheinlich den größten Nutzen aus diesem Kurs ziehen.
